Fixed visibility function for password feld

--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -94,24 +94,13 @@ input {
     cursor: pointer;
 }
 
-/* input[type="text"] {
-    background-image: url('./../assets/img/person.svg');
-} */
-
 input[type="email"] {
     background-image: url('./../assets/img/mail.svg');
 }
 
-/* input[type="password"] {
-    background-image: url('./../assets/img/lock.svg');
-    position: relative;
-} */
-
 .login-password-box {
     position: relative;
 }
-
-
 
 #login-password-icon {
     position: absolute;
@@ -119,8 +108,6 @@ input[type="email"] {
     height: 24px;
     right: 32px;
     top: 8px;
-    cursor: pointer;
-    z-index: 1;
 }
 
 .login-checkbox-box {
